fix menu items overflow issues in desktop view

--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -28,7 +28,6 @@
   display: flex;
   flex-direction: column;
   overflow-x: hidden;
-
 }
 .topnav .links {
   background-color: var(--dark-text-col);
@@ -87,6 +86,7 @@
     flex-direction: row;
     gap: 100px;
     justify-content: center;
+    overflow: visible;
   }
 
   .topnav .links:hover {
